more fontawesome 5 issues

--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -45,7 +45,7 @@
                         </button>
                         <button if.bind="user.privileges.ADMIN" type="button" type="button" class="btn btn-warning ${dirty_story || dirty_info ? 'disabled' : btn-warning'}"
                             click.trigger="tryDelete(member.member_info.id)" t="[title]members.delete-member">
-                            <i class="fa fa-large fa-trash"></i>
+                            <i class="far fa-large fa-trash-alt"></i>
                         </button>
                     </div>
                 </div>
