--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -4,7 +4,7 @@
         <div class="row" style="background-color:gray;height:60px;padding-top:13px;">
             <div class="col-md-3">
                 <a click.trigger="create_new_member()" class="btn btn-success cl-create-btn" if.bind="gender">
-                    <i class="fa fa-plus-square-o"></i>
+                    <i class="far fa-plus-square"></i>
                     ${'members.new' & t}
                 </a>
             </div>
