--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -9,7 +9,7 @@
 
                         <div class="col-md-1 col-md-offset-5" if.bind="user.editing" style="padding-top:18px;">
                             <a route-href="route: story-detail; params.bind: {id:'new', used_for: api.constants.story_type.STORY4TERM}" class="btn btn-success cl-create-btn">
-                                <i class="fa fa-plus-square-o"></i>
+                                <i class="far fa-plus-square"></i>
                                 ${'terms.new' & t}
                             </a>
                         </div>
