--- a/src/admin/adhoc-scripts.html
+++ b/src/admin/adhoc-scripts.html
@@ -15,7 +15,7 @@
                         <i class="fa fa-large fa-chevron-right" ></i>
                     </button>
                         <button type="button" tabindex="-1" class="btn btn-default" click.delegate="delete(code)">
-                        <i class="fa fa-large fa-trash" ></i>
+                        <i class="far fa-large fa-trash-alt" ></i>
                     </button>
                         <i class="fa fa-search"> </i>
                         <input type="text" value.bind="like" class="fa fa-search" style="height:2.3em;border-radius:0.5em;" change.delegate="prev_code(code)"></input>
