--- a/src/home/home.html
+++ b/src/home/home.html
@@ -53,7 +53,7 @@
             </div>
             <div class="col-md-3 panel-messages" style="direction: rtl">
                 <h2 style="margin:0;margin-bottom:12px;">${'home.messages' & t}
-                    <span class="is-link" if.bind="user.editing" click.delegate="add_message()"><i class="fa fa-plus-square-o"></i></span>
+                    <span class="is-link" if.bind="user.editing" click.delegate="add_message()"><i class="far fa-plus-square"></i></span>
                 </h2>
                 <ul class="message">
                     <li repeat.for="msg of message_list" dir="rtl" style="border-bottom: solid 2px gray;margin-bottom:10px;" >
