--- a/src/members/members.html
+++ b/src/members/members.html
@@ -24,7 +24,7 @@
                         </div>
                         <div if.bind="user.editing && ! caller_type" class="input-group" style="padding-top:16px;">
                             <a route-href="route: member-details; params.bind: {id:'new'}" class="btn btn-success cl-create-btn">
-                                <i class="fa fa-plus-square-o"></i>
+                                <i class="far fa-plus-square"></i>
                                 ${'members.new' & t}
                             </a>
                         </div>
