--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -28,10 +28,6 @@
                                 <a click.trigger="unmerge_options(option, $event)">
                                     <i class="fa fa-paperclip fa-rotate-90 tool" aubs-tooltip="text.bind:why_unclip;position: top;class:ms-tooltip;"></i>
                                 </a>
-                                <!--<a if.bind="user.advanced && !user.editing" click.trigger="toggle_sign(option, $event)">
-                                    <-- The rotatate-180 thing here and below is kind of voodoo. It is crazy without it >
-                                    <i class="fa fa-${option.sign}-square-o fa-rotate-180 tool"></i>
-                                </a>-->
                             </span>
                         </span>
                     </div>
@@ -50,13 +46,13 @@
                                     <i class="fa fa-paperclip fa-rotate-90 tool" aubs-tooltip="text.bind:why_clip;position: top;class:ms-tooltip;"></i>
                                 </a>
                                 <a if.bind="can_set_sign" click.trigger="toggle_sign(option, $event)">
-                                    <i class="fa fa-${option.sign}-square-o fa-rotate-180 tool"></i>
+                                    <i class="far fa-${option.sign}-square fa-rotate-180 tool"></i>
                                 </a>
                                 <a if.bind="can_edit_name" click.trigger="edit_option(option, $event)">
                                     <i class="fa far-pencil fa-rotate-180 fa-rotate-180 tool"></i>
                                 </a>
                                 <a if.bind="can_delete" click.trigger="remove_option(option, $event)">
-                                    <i class="fa fa-trash fa-rotate-180 tool"></i>
+                                    <i class="far fa-trash-alt tool"></i>
                                 </a>
                             </span>
                         </span>
