--- a/src/resources/elements/search-input.html
+++ b/src/resources/elements/search-input.html
@@ -6,6 +6,6 @@
             <help topic="search-input" class="search" icon="search" position="bottom" css="position:absolute;top:${(height-30)/2}px;right:4px;"></help>
         </div>
         <input type="search" value.bind="value" t="[placeholder]${placeholder}" css="height:${height}px;">
-        <i class="fa fa-remove remove" if.bind="value" click.trigger="clear_text()" css="top:${(height-14)/2}px;"></i>
+        <i class="far fa-times fa-sm remove" if.bind="value" click.trigger="clear_text()" css="top:${(height-14)/2}px;"></i>
     </div>
 </template>
