--- a/src/admin/hit-counts.html
+++ b/src/admin/hit-counts.html
@@ -1,5 +1,5 @@
 <template>
-    <require from="./hit-counts.css"></require>
+    <require from="./admin.css"></require>
     <section class="container content-area" style="padding-right:30px;">
         <div css="direction:${theme.rtltr1}">
             <span class="boom">Total Hits Count: ${total_count}</span>
