--- a/src/admin/edit-user.html
+++ b/src/admin/edit-user.html
@@ -1,35 +1,27 @@
 <template>
-    <div class="ngdialog-message">
-        <h3>User Information</h3>
-        <form class="form-horizontal" role="form">
-            <div class="form-group">
-                <label for="inputFirstName3" class="col-sm-4 control-label">First Name</label>
-                <div class="col-sm-8">
+    <ux-dialog style="padding:12px;">
+        <ux-dialog-header>
+            <h3>User Information</h3>
+        </ux-dialog-header>
+        <ux-dialog-body style="padding:10px;">
+            <form class="form-horizontal" role="form">
+                <div class="form-group">
                     <input type="text" class="form-control" id="inputFirstName3" placeholder="First Name" value.bind="curr_user.first_name">
                 </div>
-            </div>
-        <div class="form-group">
-            <label for="inputLastName3" class="col-sm-4 control-label">Last Name</label>
-            <div class="col-sm-8">
-                <input type="text" class="form-control" id="inputLastName3" placeholder="Last Name" value.bind="curr_user.last_name">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-sm-4 control-label">Email</label>
-            <div class="col-sm-8">
-                <input type="email" class="form-control lowercase" id="inputEmail3" placeholder="Email" value.bind="curr_user.email">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputPassword3" class="col-sm-4 control-label">Password</label>
-            <div class="col-sm-8">
-                <input type="text" class="form-control" id="inputPassword3" placeholder="Password" value.bind="curr_user.password">
-            </div>
-        </div>
-    </form>			
-    </div>
-    <div class="ngdialog-buttons">
-        <button type="button" class="btn btn-primary" click.delegate="save()">Save</button>
-        <button type="button" class="btn btn-info" click.delegate="closeThisDialog('button')">Cancel</button>
-    </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="inputLastName3" placeholder="Last Name" value.bind="curr_user.last_name">
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control lowercase" id="inputEmail3" placeholder="Email" value.bind="curr_user.email">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="inputPassword3" placeholder="Password" value.bind="curr_user.password">
+                </div>
+            </form>
+        </ux-dialog-body>
+        <ux-dialog-footer>
+            <button type="button" class="btn btn-primary" click.delegate="save()">Save</button>
+            <button type="button" class="btn btn-info" click.delegate="cancel()">Cancel</button>
+        </ux-dialog-footer>
+    </ux-dialog>
 </template>
