--- a/src/admin/access-manager.html
+++ b/src/admin/access-manager.html
@@ -4,9 +4,22 @@
         <div style="width:400px;margin-left:auto;margin-right:auto">
             <h3 class="center">Access Manager</h3>
         </div>
-        <div style="height:660px;width:1000px;margin-left:auto;margin-right:auto;overflow:auto;">
-            <a href class="btn btn-primary" click.delegate="add_or_update()"style="margin-bottom:1em;">Add User</a>
-            <table class="table table-striped" aurelia-table="data.bind: authorized_users; display-data.bind: $displayData">
+        <div style="height:760px;width:1000px;margin-left:auto;margin-right:auto;overflow:auto;">
+            <div class="form-inline">
+                <div class="form-group">
+                    <a href class="btn btn-primary" click.delegate="add_or_update()"style="margin-bottom:1em;">Add User</a>
+                </div>
+                <div class="form-group" style="margin-bottom:14px;">
+                    <input type="text" value.bind="filters[0].value" placeholder="Enter filter text" class="form-control"/>
+                </div>
+                <select class="form-control" value.bind="filters[1].value" style="margin-bottom:14px;">
+                    <option repeat.for="status of statuses" model.bind="status">${status}</option>
+                </select> 
+            </div>
+            <table class="table table-striped" 
+                aurelia-table="data.bind: authorized_users; display-data.bind: $displayData; 
+                current-page.bind: currentPage; page-size.bind: pageSize; total-items.bind: totalItems;
+                filters.bind:filters;">
                 <thead>
                     <tr>
                         <th aut-sort="key: id">ID</th>
@@ -52,17 +65,38 @@
                     </tr>
                 </tbody>
             </table>
+
+            <div class="row">
+                <div class="col-md-9">
+                    <aut-pagination current-page.bind="currentPage" page-size.bind="pageSize" total-items.bind="totalItems"
+                                        pagination-size.bind="15" boundary-links.bind="true"> </aut-pagination>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-inline">
+                        <div class="form-group pull-right">
+                            <label for="pageSize">Page Size: </label>
+                            <select value.bind="pageSize" id="pageSize" class="form-control">
+                                <option model.bind="5">5</option>
+                                <option model.bind="10">10</option>
+                                <option model.bind="15">15</option>
+                                <option model.bind="50">50</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>        
         </div>
     </div>
-<style>
-    i.is_active
-    {
-        font-weight: bold;
-        color: orange;
-    }
-    h3.center
-    {
-        text-align: center;
-    }
-</style>
+    <style>
+        i.is_active
+        {
+            font-weight: bold;
+            color: orange;
+        }
+        h3.center
+        {
+            text-align: center;
+        }
+    </style>
 </template> 
