--- a/src/admin/access-manager.html
+++ b/src/admin/access-manager.html
@@ -1,10 +1,10 @@
 <template>
     <require from="./admin.css"></require>
-    <div style="height:100%;">
+    <div style="height:100%;margin-top:-30px;">
         <div style="width:400px;margin-left:auto;margin-right:auto">
             <h3 class="center">Access Manager</h3>
         </div>
-        <div style="height:760px;width:1000px;margin-left:auto;margin-right:auto;overflow:auto;">
+        <div style="height:760px;width:1200px;margin-left:auto;margin-right:auto;overflow:auto;">
             <div class="form-inline">
                 <div class="form-group">
                     <a href class="btn btn-primary" click.delegate="add_or_update()"style="margin-bottom:1em;">Add User</a>
@@ -66,7 +66,7 @@
                 </tbody>
             </table>
 
-            <div class="row">
+            <div class="row" style="margin-right:0;">
                 <div class="col-md-9">
                     <aut-pagination current-page.bind="currentPage" page-size.bind="pageSize" total-items.bind="totalItems"
                                         pagination-size.bind="15" boundary-links.bind="true"> </aut-pagination>
