--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -58,6 +58,7 @@
                             </div>
                         </form>
                     </div>
+                    <span if.bind="no_results"><h2>${'no-results' & t}</h2></span>
                     <ul style="width:100%;padding:0;float:right;height:560px;overflow:auto;list-style-type: none;padding-left:20px;">
                         <li repeat.for="story of story_list | filter: filter : 'name' : 'author' | take : 9999 | sort : 'name'" dir="rtl" 
                             style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;">
