--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -13,7 +13,7 @@
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:32px;">
                         <form class="form-inline">
-                            <div class="input-group" style="width:400px;" if.bind="user.privileges.ADVANCED">
+                            <div class="input-group" style="width:400px;" if.bind="user.privileges.DEVELOPER">
                                 <search-input value.bind="filter" 
                                     placeholder="stories.filter" height="38"
                                     change.delegate="update_story_list()">
