--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -58,9 +58,19 @@
                             </div>
                         </form>
                     </div>
-                    <span if.bind="no_results"><h2>${'no-results' & t}</h2></span>
+                    <h2 if.bind="no_results">
+                        ${'no-results' & t}
+                    </h2>
+                    <form class="form-inline" style="margin-right:36px;margin-bottom:6px;">
+                        <button repeat.for="uf of active_result_types" 
+                            class="btn btn-${uf==used_for ? 'primary' : 'default'}" 
+                            click.delegate="select_used_for(uf)">
+                            ${'result' + uf & t}
+                        </button>
+                    </form>
                     <ul style="width:100%;padding:0;float:right;height:560px;overflow:auto;list-style-type: none;padding-left:20px;">
                         <li repeat.for="story of story_list | filter: filter : 'name' : 'author' | take : 9999 | sort : 'name'" dir="rtl" 
+                            if.bind="story.used_for==used_for"
                             style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;">
                             <div style="height:130px;overflow:hidden;padding-right:20px;padding-left:20px;padding-top:0px;">
                                 <div style="margin-bottom: 10px;" aubs-tooltip="text.bind:story.topics">
@@ -90,7 +100,7 @@
 
                 </div>
                 <div class="col-md-3">
-                    <div class="row">
+                    <div class="row" if.bind="false">
                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.story-types' & t}</div>
                         <multi-select options.bind="story_types" 
                             place_holder_text="stories.story-types" 
