--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
     <require from="scrollbox.css"></require>
     <require from="toastr/build/toastr.min.css"></require>
     
-    <div css="background-image:url('${theme.files.content_background}'); min-height:${theme.min_height}px;" >
+    <div css="background-image:url('${theme.files.content_background}'); min-height:${theme.min_height}px;" class="${theme.palette}" >
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color:white" if.bind="! theme.hide_menu" >
             <div class="container">
                 <div class="navbar-header navbar-right" style="padding-bottom:8px;">
