--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color:white" if.bind="! theme.hide_menu" >
             <div class="container">
                 <div class="navbar-header navbar-right" style="padding-bottom:8px;">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="#" style="margin-left:-20px">
                         <span style="font-size:200%;">
                             ${router.title & t}
                             <img src="${theme.files.gb_logo_png}" width="32" style="float:right;margin-left:15px;" />
@@ -18,10 +18,10 @@
                 <div id="skeleton-navigation-navbar-collapse">
                     <ul class="nav navbar-nav navbar-right hidden-xs hidden-sm" css="font-size:150%;margin-top:4px;direction:${theme.rtltr};">
                         <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
-                            <a data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse.in" href.bind="row.href">${row.title & t}.</a>
+                            <a data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse.in" href.bind="row.href" style="padding-left:6px;padding-right:6px;">${row.title & t}.</a>
                         </li>
                     </ul>
-                    <input type="text" style="width:160px;margin-left:22px;margin-top:18px;padding-left:5px;padding-right:5px;"
+                    <input type="text" css="width:${search_input_width}px;margin-left:20px;margin-top:18px;padding-left:5px;padding-right:5px;"
                         value.bind="keywords"
                         t="[placeholder]enter-search-words" dir.bind="theme.rtltr"
                         change.delegate="go_search()" />
