--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -10,6 +10,7 @@
                 <i if.bind="settings.checkable && user.editing" class="fa${story.checked ? '' : 'r'} fa-circle fa-sm is-link" t="[title]stories.checking" click.trigger="toggle_checked()">&nbsp;</i>
             <span if.bind="settings.show_date &&story.timestamp">${story.timestamp} | </span>
             <span if.bind="story.author">${story.author}:&nbsp;</span>
+            <span if.bind="! story.author">${'stories.unknown-source' & t}:&nbsp;</span>
         </div>
         <div class="row checkable ${story.checked ? 'selected' : ''}"><strong style="float:right" innerhtml.bind="story.name" ></strong></div>
 
