--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -145,7 +145,7 @@
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel" show.bind="story_4.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_4.story_text ">
+                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_4.story_preview ">
                         </p>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel" show.bind="story_3.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_3.story_text ">
+                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_3.story_preview">
                         </p>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel" show.bind="story_2.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_2.story_text ">
+                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_2.story_preview">
                         </p>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel" show.bind="story_1.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_1.story_text">
+                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_1.story_preview">
                         </p>
                     </div>
                 </div>
