--- a/src/home/home.html
+++ b/src/home/home.html
@@ -30,23 +30,23 @@
                     </span>
                 </h2>
                 <ul class="panel-story-segments">
-                    <li repeat.for="story of stories_sample" dir="rtl">
+                    <li repeat.for="story of stories_sample" dir="${theme.rtltr}"  click.delegate="jump_to_the_full_story(story)" style="cursor:pointer;">
                         <div style="margin-top:12px;max-height:100px;min-height:100px;padding-bottom:30px;border-bottom:solid 2px lightgray;position:relative;" >
-                            <h4 dir="rtl" style="float:right;margin:0;padding:0;cursor:pointer;font-weight:bold;" click.delegate="jump_to_the_full_story(story)">
+                            <h4 dir="rtl" style="float:right;margin:0;padding:0;cursor:pointer;font-weight:bold;">
                                 ${story.name}
                             </h4>
                             <div class="story-prefix">
-                                <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story.story" 
+                                <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story.story_preview" 
                                     style="text-align:right;max-height:50px;width:100%;overflow:hidden;">
                                 </p>
                             </div>
-                            <div style="position:absolute;bottom:0px;left:12px;cursor:pointer;">
+                            <!--<div style="position:absolute;bottom:0px;left:12px;cursor:pointer;">
                                 <a click.delegate="jump_to_the_full_story(story)">
                                     <span if.bind="story.used_for==api.constants.story_type.STORY4EVENT" dir="${theme.rtltr}">
                                         ${'stories.to-the-full-story' & t }...
                                     </span>
                                 </a>
-                            </div>
+                            </div>-->
                         </div>
                     </li>
                 </ul>
