--- a/src/app.html
+++ b/src/app.html
@@ -25,6 +25,7 @@
                         value.bind="keywords"
                         t="[placeholder]enter-search-words" dir.bind="theme.rtltr"
                         change.delegate="go_search()" />
+                    <!--<search-input value.bind="keywords" placeholder.bind="'enter-search-words' & t" height="32"></search-input>-->
                     <button style="background-color:lightblue;color:white;border:solid 1px lightblue;" click.delegate="go_search(true)">
                         <i class="far fa-search"></i>
                     </button>
