--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -149,8 +149,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" css="float:${theme.same_dir};height:${story_box_height}px;">
-                    <div class="member-story-header" show.bind="story_3.story_text != ''" aubs-tooltip="text.bind:to_story_page" click.trigger="goto_story_page(story_3)" >
+                <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_3)">
+                    <div class="member-story-header" show.bind="story_3.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4 dir="rtl">
                             <i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>
                             <span class="name" innerhtml.bind="story_3.name"></span>
@@ -162,8 +162,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" css="float:${theme.same_dir};height:${story_box_height}px;" >
-                    <div class="member-story-header" show.bind="story_2.story_text != ''" aubs-tooltip="text.bind:to_story_page" click.trigger="goto_story_page(story_2)" >
+                <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_2)">
+                    <div class="member-story-header" show.bind="story_2.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4 dir="rtl">
                             <i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>
                             <span class="name" innerhtml.bind="story_2.name"></span>
@@ -175,8 +175,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;">
-                    <div class="member-story-header" show.bind="story_1.story_text != ''" aubs-tooltip="text.bind:to_story_page" click.trigger="goto_story_page(story_1)" >
+                <div class="col-md-3 col-sm-6 hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_1)">
+                    <div class="member-story-header" show.bind="story_1.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4 dir="rtl">
                             <i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>
                             <span class="name" innerhtml.bind="story_1.name"></span>
