class header-title for all header titles

--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -2,8 +2,8 @@
     <require from="./photos.css"></require>
 
     <div style="margin-top:20px;width:1170px;margin-left:auto;margin-right:auto;min-height:755px;padding-right:30px;padding-left:16px;" class="content-area photo-detail">
-        <div class="row" 
-            style="background-color:lightgrey;padding:10px;padding-top:14px;margin-bottom:15px;margin-right:0px;margin-left:0px;font-size:150%;height:64px;padding-top:20px;">
+        <div class="row detail-header" 
+            style="padding:10px;padding-top:14px;margin-bottom:15px;margin-right:0px;margin-left:0px;font-size:150%;height:64px;padding-top:20px;">
             <h3 style="float:left;cursor:pointer;padding:0;margin:0;">
                 <i class="far fa-share" t="[title]go-back" click.trigger="go_back()"></i>
             </h3>
