--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -21,7 +21,7 @@
             <div id="member-detail-content" class="row" dir="rtl" ref="top_panel">
                 <div class="col-md-6">
                     <h3 if.bind="member.family_connections.hasFamilyConnections">${'members.family-connections' & t}</h3>
-                    <div class="family-chains">
+                    <div class="family-chains" style="overflow:auto;" ref="family_connections_panel">
                         <table class="noborder">
                             <tr if.bind="member.family_connections.parents && (member.family_connections.parents.pa || member.family_connections.parents.ma)">
                                 <td class="relation-kind">${'parents' & t}</td>
