--- a/src/app.html
+++ b/src/app.html
@@ -8,9 +8,9 @@
             <div class="container">
                 <div class="navbar-header navbar-right" style="padding-bottom:8px;">
                     <a class="navbar-brand" href="#" style="margin-left:-20px">
-                        <span style="font-size:200%;">
+                        <span style="font-size:200%;position:relative;padding-right:48px;">
                             ${router.title & t}
-                            <img src="${theme.files.gb_logo_png}" width="32" style="float:right;margin-left:15px;" />
+                            <img src="${theme.files.gb_logo_png}" width="32" style="float:right;margin-left:15px;position:absolute;right:-46px;top:12px;" />
                         </span>
                     </a>
                 </div>
