--- a/src/resources/elements/multi-select/multi-select-new.html
+++ b/src/resources/elements/multi-select/multi-select-new.html
@@ -18,20 +18,20 @@
         </button>
         <!-- list of selected options -->
         <div class="row options selected">
-            <ul>
+            <ul css="padding-right:0;max-height:${settings.height_selected}px;overflow:auto;">
                 <li repeat.for="item of selected_options" class="${item.group_number % 2 ? 'odd-group' : 'even-group'}">
                     <div class="option-item" css="margin:0;padding:0;width:${inner_width}px;width:100%;height:24px;position:relative;">
                         <!-- lock/unlock button -->
-                        <i class="far fa-${item.group_number==open_group ? 'unlock' : 'lock'}" 
+                        <i class="far fa-${item.group_number==open_group ? 'lock-open-alt' : 'lock-alt'}" 
                             if.bind="item.first" 
-                            style="position:absolute;left:0;"
+                            style="position:absolute;left:0;top:4px;"
                             click.delegate="toggle_group(item.group_number)">
                         </i>
                         <i class="far fa-times-circle"
-                            style="position:absolute;left:24px;"
+                            style="position:absolute;left:20px;top:4px;"
                             click.delegate="unselect_item(item, $index)">
                         </i>
-                        <span click.delegate="move_item(item)" style="height:20px;">${item.option.name}</span>
+                        <span click.delegate="move_item(item)" style="height:24px;padding-right:5px;">${item.group_number}: ${item.option.name}</span>
                     </div>
                 </li>
             </ul>
@@ -39,8 +39,8 @@
 
         <!-- unselected options -->
         <div class="row options unselected" 
-            css="max-height:${filter || display_option_list ? height_unselected : 0}px;" 
-            if.bind="options && options.length > 0 && (filter.length > 0 || ! settings.show_only_if_filter || selected_options_set.size > 0)">
+            css="max-height:${filter || display_option_list ? settings.height_unselected : 0}px;" 
+            if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter) || selected_options_set.size > 0)">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' | take : 199">
                     <div class="option-item" css="margin:0;padding:0;padding-right:2px;width:${inner_width}px">
